# TournamentScheduler

./: .gitignore  CLAUDE.md
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/tournament/api/: main.py
backend/tests/: test_health.py
